# sniper-node

./: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
lib/: index.d.ts  index.js
native/: Cargo.toml
native/src/: lib.rs
src/: lib.rs  node_client.rs
