[package]
name = "sniper-node"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
license = "Apache-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sniper_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.0"

[dependencies]
sniper-core = { path = "../../sniper-core"}
neon = "0.5.0"
